# Haskell-Wikipedia-MCP-Server

./: .gitignore  LICENSE  README.md  cabal.project  mcp_server.cabal  test.json
src/: ArgumentExtractor.hs  Dispatch.hs  Extractor.hs  Handlers.hs  Main.hs  Request.hs  Response.hs  ResultExtractor.hs  Router.hs  ToolResolver.hs  ToolSchemas.hs  Wikipedia.hs
