cabal-version:       >=1.10
name:                mcp-server
version:             0.1.0.0
build-type:          Simple

executable my-mcp-server
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
      Router,
      Handlers,
      ToolResolver,
      ToolSchemas,
      Dispatch,
      ArgumentExtractor,
      Wikipedia,
      Request,
      Response
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-unused-do-bind

  build-depends:
      base >=4.7 && <5,
      aeson,
      bytestring,
      text,
      containers,
      http-conduit,
      http-types
